{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 863,
  "lineage": "61f4dc2f-9069-8cd6-c059-12e0c5c5bcb0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "control_plane_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-09e973f123c32cf86",
            "arn": "arn:aws:ec2:us-east-1:953909302469:instance/i-03cd56de7e28115f6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "instance-state-name",
                "values": [
                  "running"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "node_control_plane"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "k8s_node_instance_profile",
            "id": "i-03cd56de7e28115f6",
            "instance_state": "running",
            "instance_type": "t3.small",
            "key_name": "deployer-key",
            "launch_time": "2026-08-05T07:00:42Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-09a983eab1c086b18",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-2-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fff1ca877853efeb",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07154cb03170e16fe",
            "tags": {
              "Name": "node_control_plane"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058ca43d24ea9ad17"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "data_plane_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-09e973f123c32cf86",
            "arn": "arn:aws:ec2:us-east-1:953909302469:instance/i-030c54c798cc2e84e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "instance-state-name",
                "values": [
                  "running"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "node_data_plane"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "k8s_node_instance_profile",
            "id": "i-030c54c798cc2e84e",
            "instance_state": "running",
            "instance_type": "t3.small",
            "key_name": "deployer-key",
            "launch_time": "2026-08-05T07:00:41Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-060d3f05ac4db3d51",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-2-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.45",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dfacd2af16fa0c24",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07154cb03170e16fe",
            "tags": {
              "Name": "node_data_plane"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058ca43d24ea9ad17"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "spot_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09e973f123c32cf86",
            "arn": "arn:aws:ec2:us-east-1:953909302469:instance/i-0abe66824d8acc3ee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abe66824d8acc3ee",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.039200",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00ca2586fe1d67166"
              }
            ],
            "primary_network_interface_id": "eni-00ca2586fe1d67166",
            "private_dns": "ip-10-0-0-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.93",
            "public_ip": "13.220.45.9",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05711c30e6e874295",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-fsbzg2np",
            "subnet_id": "subnet-086c383721ec63fdc",
            "tags": {
              "Name": "bastion-box"
            },
            "tags_all": {
              "Name": "bastion-box"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01dba19451e83d2e1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "i-0abe66824d8acc3ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpc_infra.aws_security_group.public_sg",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019281a97a5ba2819",
            "arn": "arn:aws:ec2:us-east-1:953909302469:elastic-ip/eipalloc-019281a97a5ba2819",
            "domain": "vpc",
            "id": "eipalloc-019281a97a5ba2819",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-244-109.compute-1.amazonaws.com",
            "public_ip": "23.22.244.109",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "eipalloc-019281a97a5ba2819",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027a6f38802656591",
            "arn": "arn:aws:ec2:us-east-1:953909302469:elastic-ip/eipalloc-027a6f38802656591",
            "domain": "vpc",
            "id": "eipalloc-027a6f38802656591",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-153-188.compute-1.amazonaws.com",
            "public_ip": "54.225.153.188",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "eipalloc-027a6f38802656591",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:internet-gateway/igw-04816db43d64acf8a",
            "id": "igw-04816db43d64acf8a",
            "owner_id": "953909302469",
            "region": "us-east-1",
            "tags": {
              "App": "my_vpc_project"
            },
            "tags_all": {
              "App": "my_vpc_project"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "igw-04816db43d64acf8a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019281a97a5ba2819",
            "association_id": "eipassoc-0a7e85b2e5ea3788c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bd49a7bad0bae4b9",
            "network_interface_id": "eni-0a864458ca3b79bfe",
            "private_ip": "10.0.0.233",
            "public_ip": "23.22.244.109",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086c383721ec63fdc",
            "tags": {
              "App": "my_vpc_project",
              "Name": "nat-us-east-1a"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "nat-us-east-1a"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "nat-0bd49a7bad0bae4b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_eip.eip",
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027a6f38802656591",
            "association_id": "eipassoc-0ea945e0067a7c78a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04e24f48515613ca3",
            "network_interface_id": "eni-08472b1a17eef2b0b",
            "private_ip": "10.0.1.12",
            "public_ip": "54.225.153.188",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de0dfa6890c3eb8e",
            "tags": {
              "App": "my_vpc_project",
              "Name": "nat-us-east-1b"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "nat-us-east-1b"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "nat-04e24f48515613ca3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_eip.eip",
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "priv_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:network-acl/acl-05d0dc06f9c66ebd7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05d0dc06f9c66ebd7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "953909302469",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-07154cb03170e16fe",
              "subnet-080d9ba343b9cc5c6"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_infra.aws_subnet.private",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "pub_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:network-acl/acl-0efeb385440a43c74",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0efeb385440a43c74",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 500,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "953909302469",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-086c383721ec63fdc",
              "subnet-0de0dfa6890c3eb8e"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:route-table/rtb-0b10f8e28158f3016",
            "id": "rtb-0b10f8e28158f3016",
            "owner_id": "953909302469",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bd49a7bad0bae4b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtb-0b10f8e28158f3016",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_eip.eip",
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_nat_gateway.nat",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:route-table/rtb-09c0908b4de74f374",
            "id": "rtb-09c0908b4de74f374",
            "owner_id": "953909302469",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04e24f48515613ca3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtb-09c0908b4de74f374",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_eip.eip",
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_nat_gateway.nat",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:route-table/rtb-0d93c2fd4ad7fec20",
            "id": "rtb-0d93c2fd4ad7fec20",
            "owner_id": "953909302469",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04816db43d64acf8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtb-0d93c2fd4ad7fec20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0057be665c3ba94d3",
            "region": "us-east-1",
            "route_table_id": "rtb-0b10f8e28158f3016",
            "subnet_id": "subnet-07154cb03170e16fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtbassoc-0057be665c3ba94d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_eip.eip",
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_nat_gateway.nat",
            "module.vpc_infra.aws_route_table.priv_rt",
            "module.vpc_infra.aws_subnet.private",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c56a6eae0a17a516",
            "region": "us-east-1",
            "route_table_id": "rtb-09c0908b4de74f374",
            "subnet_id": "subnet-080d9ba343b9cc5c6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtbassoc-0c56a6eae0a17a516",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_eip.eip",
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_nat_gateway.nat",
            "module.vpc_infra.aws_route_table.priv_rt",
            "module.vpc_infra.aws_subnet.private",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d6e49e8b39189f",
            "region": "us-east-1",
            "route_table_id": "rtb-0d93c2fd4ad7fec20",
            "subnet_id": "subnet-086c383721ec63fdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtbassoc-049d6e49e8b39189f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_route_table.public_rt",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b9f6e5ec0817516",
            "region": "us-east-1",
            "route_table_id": "rtb-0d93c2fd4ad7fec20",
            "subnet_id": "subnet-0de0dfa6890c3eb8e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "rtbassoc-05b9f6e5ec0817516",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_internet_gateway.igw",
            "module.vpc_infra.aws_route_table.public_rt",
            "module.vpc_infra.aws_subnet.public",
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:security-group/sg-058ca43d24ea9ad17",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058ca43d24ea9ad17",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dba19451e83d2e1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "953909302469",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "sg-058ca43d24ea9ad17",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_security_group.public_sg",
            "module.vpc_infra.aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:security-group/sg-01dba19451e83d2e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dba19451e83d2e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "953909302469",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "sg-01dba19451e83d2e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:subnet/subnet-07154cb03170e16fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07154cb03170e16fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953909302469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "App": "my_vpc_project",
              "Name": "priv0"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "priv0"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "subnet-07154cb03170e16fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:subnet/subnet-080d9ba343b9cc5c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080d9ba343b9cc5c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953909302469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "App": "my_vpc_project",
              "Name": "priv1"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "priv1"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "subnet-080d9ba343b9cc5c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:subnet/subnet-086c383721ec63fdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c383721ec63fdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953909302469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "App": "my_vpc_project",
              "Name": "pub0"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "pub0"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "subnet-086c383721ec63fdc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:subnet/subnet-0de0dfa6890c3eb8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de0dfa6890c3eb8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953909302469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "App": "my_vpc_project",
              "Name": "pub1"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "pub1"
            },
            "vpc_id": "vpc-044fb45d85b64b7ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "subnet-0de0dfa6890c3eb8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953909302469:vpc/vpc-044fb45d85b64b7ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a49b8b064e24109d",
            "default_route_table_id": "rtb-042b4cb81a562dfd2",
            "default_security_group_id": "sg-0c29766a5508cba6b",
            "dhcp_options_id": "dopt-03c53532e2e4b0455",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044fb45d85b64b7ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042b4cb81a562dfd2",
            "owner_id": "953909302469",
            "region": "us-east-1",
            "tags": {
              "App": "my_vpc_project",
              "Name": "my-vpc"
            },
            "tags_all": {
              "App": "my_vpc_project",
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "953909302469",
            "id": "vpc-044fb45d85b64b7ac",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}